# devide-et-imperia

./: README.md  pyproject.toml  requirements.txt
devide_et_imperia/: __init__.py  context.py  views.py
devide_et_imperia/domain/: models.py  types.py
devide_et_imperia/service/: repo.py
devide_et_imperia/static/: script.js
devide_et_imperia/templates/: index.html
