[project]
name = "devide-et-empire"
version = ""
description = ""
authors = [
    { name = "Dzmitry Izaitka", email = "dem214overlord@gmail.com" },
]
dependencies = [
    "Flask>=2.3.2",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pdm.scripts]
start.cmd = "flask run"
start.env = { FLASK_APP = "devide_et_imperia", FLASK_ENV = "development", FLASK_DEBUG = "1" }
